initial alliances page...couple of fixes

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@ layout: default
 
           <p>
             We offer services in a number of areas to accelerate your journey to
-            becoming a digital-first agency: Digital Services Delivery, Digital Procurement,
-            and Digital Transformation.
+            becoming a digital-first agency:
+            <a href="/services/digital-services-delivery">Digital Services Delivery</a>,
+            <a href="/services/digital-procurement">Digital Procurement</a>,
+            and <a href="/services/digital-transformation">Digital Transformation</a>.
           </p>
 
           <p>
