fixed folder structure for policies

--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -13,12 +13,18 @@ header_css_class: page-hdr-1
   <div class="container">
 
     <div class="row">
-      <div class="alliances-contact">
+      <div class="text-lead">
         <p>
           We’re embarking on a mission to create a world-class ecosystem of alliances &mdash;
           from large companies to independent freelancers &mdash; who are passionate about making
           government work in a digital world.
         </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="alliances-contact">
+
       </div>
     </div>
 
