--- a/pages/policies.html
+++ b/pages/policies.html
@@ -12,13 +12,17 @@ header_css_class: page-hdr-1
   <div class="container">
 
     <div class="row">
-      <div class="policy-list">
+      <div class="text-lead">
         <p>
           Our policies govern how we interact with you and our fellow colleagues.
           We've written them to be as plain language as possible so humans
           (not just lawyers) can actually understand them.
         </p>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="policy-list">
         <ul>
           <li><a href="/policies/privacy/">Privacy policy</a></li>
           <li><a href="/policies/intellectual-property/">Intellectual property policy</a></li>
