--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -24,7 +24,36 @@ header_css_class: page-hdr-1
 
     <div class="row">
       <div class="alliances-contact">
+        <form>
+          <div class="form-group">
+            <label class="required" for="name-input">Name</label>
+            <input class="form-control" type="text" id="name-input" placeholder="Julie Styles">
+          </div>
 
+          <div class="form-group">
+            <label class="required" for="org-input">Organization</label>
+            <input class="form-control" type="text" id="org-input" placeholder="Acme Technologies">
+          </div>
+
+          <div class="form-group">
+            <label class="required" for="email-input">Email</label>
+            <input class="form-control" type="email" id="email-input" placeholder="julie@acmetech.co">
+          </div>
+
+          <div class="form-group">
+            <label for="tel-input">Telephone</label>
+            <input class="form-control" type="tel" id="tel-input" placeholder="555-555-5555">
+          </div>
+
+          <div class="form-group">
+            <label class="required" for="help-input">How can we work together?</label>
+            <textarea class="form-control" id="help-input" rows="3" placeholder="Let's team on an exciting project opportunity..."></textarea>
+          </div>
+
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
     </div>
 
