--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -27,17 +27,17 @@ header_css_class: page-hdr-1
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
-            <input class="form-control" type="text" id="name-input" placeholder="Julie Styles">
+            <input class="form-control" type="text" id="name-input" placeholder="Julie Styles" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="org-input">Organization</label>
-            <input class="form-control" type="text" id="org-input" placeholder="Acme Technologies">
+            <input class="form-control" type="text" id="org-input" placeholder="Acme Technologies" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="email-input">Email</label>
-            <input class="form-control" type="email" id="email-input" placeholder="julie@acmetech.co">
+            <input class="form-control" type="email" id="email-input" placeholder="julie@acmetech.co" required>
           </div>
 
           <div class="form-group">
@@ -47,7 +47,7 @@ header_css_class: page-hdr-1
 
           <div class="form-group">
             <label class="required" for="help-input">How can we work together?</label>
-            <textarea class="form-control" id="help-input" rows="3" placeholder="Let's team on an exciting project opportunity..."></textarea>
+            <textarea class="form-control" id="help-input" rows="3" placeholder="Let's team on an exciting project opportunity..." required></textarea>
           </div>
 
           <div class="form-group">
