--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Alliances
-permalink: /alliances/
-header_title: Let's partner!
+title: Hire Us
+permalink: /hire-us/
+header_title: Let's deliver something great.
 header_css_class: page-hdr-1
 ---
 
@@ -15,9 +15,10 @@ header_css_class: page-hdr-1
     <div class="row">
       <div class="text-lead">
         <p>
-          We’re embarking on a mission to create a world-class ecosystem of alliances &mdash;
-          from large companies to independent freelancers &mdash; who are passionate about making
-          government work in a digital world.
+          <strong>We’d love to work with you on turning your most complex problem or
+          bold idea into a public success story.</strong> Please describe what you're looking
+          to do, and we'll follow-up in one business day. If you prefer, you can email
+          us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
         </p>
       </div>
     </div>
@@ -32,12 +33,12 @@ header_css_class: page-hdr-1
 
           <div class="form-group">
             <label class="required" for="org-input">Organization</label>
-            <input class="form-control" type="text" id="org-input" placeholder="Acme Technologies" required>
+            <input class="form-control" type="text" id="org-input" placeholder="Department of Great Technology" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="email-input">Email</label>
-            <input class="form-control" type="email" id="email-input" placeholder="julie@acmetech.co" required>
+            <input class="form-control" type="email" id="email-input" placeholder="julie@dgt.gov" required>
           </div>
 
           <div class="form-group">
@@ -46,8 +47,8 @@ header_css_class: page-hdr-1
           </div>
 
           <div class="form-group">
-            <label class="required" for="help-input">How can we work together?</label>
-            <textarea class="form-control" id="help-input" rows="3" placeholder="Let's team on an exciting project opportunity..." required></textarea>
+            <label class="required" for="help-input">How can we be of service?</label>
+            <textarea class="form-control" id="help-input" rows="3" placeholder="We need help modernizing an old system..." required></textarea>
           </div>
 
           <div class="form-group">
