add css file for hire us

--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -6,7 +6,7 @@ header_title: Let's deliver something great.
 header_css_class: page-hdr-1
 ---
 
-<div class="alliances">
+<div class="hire-us">
 
   {% include page_header.html %}
 
@@ -24,7 +24,7 @@ header_css_class: page-hdr-1
     </div>
 
     <div class="row">
-      <div class="alliances-contact">
+      <div class="hire-contact">
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
