--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -24,7 +24,7 @@ header_css_class: page-hdr-1
     </div>
 
     <div class="row">
-      <div class="hire-contact">
+      <div class="hire-us-contact">
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
