--- a/pages/culture.html
+++ b/pages/culture.html
@@ -2,6 +2,35 @@
 layout: default
 title: Our Culture
 permalink: /culture/
+header_content_css_class: page-hdr-content-2
+header_content: >
+  Our values are the core of our culture, offering a set of guidelines on the
+  behaviors and mindsets needed to achieve our mission of making government work
+  in a digital world.
 ---
+
+<div class="our-culture">
+
+  {% include page_header.html %}
+
+  <div class="container">
+
+    <div class="values">
+      {% assign values = site.data.values | sort: 'order' %}
+      {% for value in values %}
+        <div class="value">
+          <div class="value-card">
+            <div class="value-block">
+              <h3>{{ value.title }}</h3>
+              <p>{{ value.statement }}</p>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+
+  </div>
+
+</div>
 
 {% include carry_culture_cta.html %}
