--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ layout: default
             transfer our knowledge of modern principles and practices to you.
             To facilitate this learning process, we employ a unique practice called
             <span class="font-italic">embedded instructional design</span>. Even further, <a href="/guilds/">our guilds</a> (communities of practice)
-            make all of our delivery assets (for example, methodologies) completely free, open,
+            make all of our delivery assets such as methodologies completely free, open,
             and accessible to you.
           </p>
 
