--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -48,7 +48,7 @@ header_css_class: page-hdr-1
 
           <div class="form-group">
             <label class="required" for="help-input">How can we be of service?</label>
-            <textarea class="form-control" id="help-input" rows="3" placeholder="We need help modernizing an old system..." required></textarea>
+            <textarea class="form-control" id="help-input" rows="3" placeholder="I need help modernizing an old system..." required></textarea>
           </div>
 
           <div class="form-group">
