70% progress on join page

--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@ header_content_img_description:
     </div>
   </section>
 
-  <section class="page-block">
+  <section id="hubzone" class="page-block">
     <div class="page-block-hdr-1">
       <h2>Certified HUBZone</h2>
     </div>
