--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@ layout: default
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         <br /> and procurement to enable government success in the digital age.
       </p>
+
+      <a href="/hire-us/" role="button">
+        <span>Let's talk</span>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </a>
     </div>
-    <a class="lp-headline-cta-btn" href="/hire-us/" role="button">
-      <span>Let's talk</span>
-    </a>
   </section>
 
   <div class="lp-body">
