--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -51,7 +51,7 @@ header_css_class: page-hdr-1
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
