--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -15,8 +15,8 @@ header_css_class: page-hdr-1
     <div class="row">
       <div class="text-lead">
         <p>
-          <strong>We’d love to work with you on turning your most complex problem or
-          bold idea into a public success story.</strong> Please describe what you're looking
+          <strong>We’d love to work with you on turning your most bold idea or complex problem
+          into a public success story.</strong> Please describe what you're looking
           to do, and we'll follow-up in one business day. If you prefer, you can email
           us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
         </p>
@@ -52,7 +52,7 @@ header_css_class: page-hdr-1
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
