--- a/pages/services.html
+++ b/pages/services.html
@@ -51,9 +51,9 @@ header_content: A lot goes into making you a digital-first agency.
       <div class="row">
         <div class="page-hdr-content-2">
           <p>
-            Your digital challenges are neither static nor siloed. Our teams are smartly
-            tailored to meet your unique and evolving needs, and to impart you with
-            the competencies necessary to succeed in the digital era.
+            Your digital challenges are neither siloed nor static. Our teams are smartly
+            tailored to meet your holistic and ever-changing needs, and to impart you with
+            the competencies necessary to succeed in the digital era without us.
           </p>
         </div>
       </div>
