--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -28,31 +28,31 @@ header_css_class: page-hdr-1
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
-            <input class="form-control" type="text" id="name-input" placeholder="Julie Styles" required>
+            <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="org-input">Organization</label>
-            <input class="form-control" type="text" id="org-input" placeholder="Department of Great Technology" required>
+            <input id="org-input" class="form-control" type="text" placeholder="Department of Great Technology" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="email-input">Email</label>
-            <input class="form-control" type="email" id="email-input" placeholder="julie@dgt.gov" required>
+            <input id="email-input" class="form-control" type="email" placeholder="julie@dgt.gov" required>
           </div>
 
           <div class="form-group">
             <label for="tel-input">Telephone</label>
-            <input class="form-control" type="tel" id="tel-input" placeholder="555-555-5555">
+            <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555">
           </div>
 
           <div class="form-group">
             <label class="required" for="help-input">How can we be of service?</label>
-            <textarea class="form-control" id="help-input" rows="3" placeholder="I need help modernizing an old system..." required></textarea>
+            <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." required></textarea>
           </div>
 
           <div class="form-group">
-            <button type="submit">Submit</button>
+            <button type="submit" role="button">Submit</button>
           </div>
         </form>
       </div>
