use aria-current attribute to indicate current page or location instead of using class...added autocomplete attributes to forms

--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -28,22 +28,22 @@ header_css_class: page-hdr-1
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
-            <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" required>
+            <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="org-input">Organization</label>
-            <input id="org-input" class="form-control" type="text" placeholder="Department of Great Technology" required>
+            <input id="org-input" class="form-control" type="text" placeholder="Department of Great Technology" name="org" autocomplete="org" required>
           </div>
 
           <div class="form-group">
             <label class="required" for="email-input">Email</label>
-            <input id="email-input" class="form-control" type="email" placeholder="julie@dgt.gov" required>
+            <input id="email-input" class="form-control" type="email" placeholder="julie@dgt.gov" name="email" autocomplete="email" required>
           </div>
 
           <div class="form-group">
             <label for="tel-input">Telephone</label>
-            <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555">
+            <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555" name="phone" autocomplete="tel">
           </div>
 
           <div class="form-group">
