made more subnav more accessible

--- a/pages/join.html
+++ b/pages/join.html
@@ -9,8 +9,8 @@ permalink: /join/
   <div class="row">
 
     <aside class="subnav" role="navigation">
-      <ul>
-        <li aria-current="location"><a href="/join/#application">Apply now</a></li>
+      <ul role="presentation">
+        <li class="current"><a href="/join/#application" aria-current="location">Apply now</a></li>
         <li><a href="/join/#who">Who we're hiring</a></li>
         <li><a href="/join/#openings">Open positions</a></li>
         <li><a href="/join/#interviewing">Interview process</a></li>
