--- a/pages/services.html
+++ b/pages/services.html
@@ -12,7 +12,9 @@ header_content: A lot goes into making you a digital-first agency.
 
   <section class="page-block extra-space container-fluid">
 
-    <h2 class="sr-only">What we offer</h2>
+    <div class="page-block-hdr-2 sr-only">
+      <h2>What we offer</h2>
+    </div>
 
     <div class="service-areas">
       {% assign service_areas = site.service_areas | sort: 'order' %}
@@ -55,7 +57,7 @@ header_content: A lot goes into making you a digital-first agency.
         <div class="page-hdr-content-2">
           <p>
             Your digital challenges are neither siloed nor static. Our teams are smartly
-            tailored to meet your holistic and ever-changing needs, and to impart you with
+            tailored to meet your holistic and dynamic needs, and to impart you with
             the competencies necessary to succeed in the digital era without us.
           </p>
         </div>
