--- a/pages/work.html
+++ b/pages/work.html
@@ -13,7 +13,7 @@ header_content: >
 
   {% include page_header.html %}
 
-  {% assign projects = site.projects | sort: 'order_weight' %}
+  {% assign projects = site.projects | sort: 'order' %}
   {% include project_list.html projects = projects %}
 
 </div>
