--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
       </h1>
 
       <h1 class="hidden-sm-down">
-        We make government <br /> work in a digital world
+        We make government <br> work in a digital world
       </h1>
 
       <p class="lead hidden-md-up">
@@ -21,7 +21,7 @@ layout: default
 
       <p class="lead hidden-sm-down">
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
-        <br /> and procurement to enable government success in the digital age.
+        <br> and procurement to enable government success in the digital age.
       </p>
 
       <a href="/hire-us/" role="button">
@@ -172,7 +172,7 @@ layout: default
           </h2>
 
           <h2 class="hidden-sm-down">
-            Strengthening your culture <br /> through ours
+            Strengthening your culture <br> through ours
           </h2>
 
           <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
