change design of industry info items...misc fixes...add/update social media links

--- a/pages/about.html
+++ b/pages/about.html
@@ -129,17 +129,17 @@ header_content_img_description:
       <div class="row">
         <div class="narrative">
           <p>
-            If you have a question for us, or would just like to get in touch, drop us a
-            message on Slack or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-            If you’d like to inquire about hiring us for a job, <a href="/hire-us">fill out this short form</a>.
-            If you're interested in joining our team, <a href="/join">send us your information</a>.
+            If you have a question for us, or would just like to get in touch, <a href="{{site.slack_invite_url}}">
+            drop us a message on Slack</a> or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+            If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
+            If you're interested in joining our team, <a href="/join/">send us your information</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
-            <a href="/alliances">let's talk</a>.
+            <a href="/alliances/">let's talk</a>.
           </p>
 
           <p>
             We love to share our thoughts on technology, design, procurement, business, culture,
-            and more with the world. You can <a href="/blog">read up on the our latest thinking at our
+            and more with the world. You can <a href="/blog/">read up on the our latest thinking at our
             company blog</a>.
           </p>
 
