--- a/pages/services.html
+++ b/pages/services.html
@@ -91,40 +91,42 @@ header_content: A lot goes into making you a digital-first agency.
 
     <div class="container">
       <div class="industry-info-list">
-        <div class="industry-info-items">
-          <div class="industry-info-item">
-            <h4>Legal Name</h4>
-            <div>Skylight Digital LLC</div>
-          </div>
-
-          <div class="industry-info-item">
-            <h4>DUNS #</h4>
-            <div>080202677</div>
-          </div>
-
-          <div class="industry-info-item">
-            <h4>CAGE Code</h4>
-            <div>7QNG6</div>
-          </div>
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3>Legal Name</h3>
+          <p>Skylight Digital LLC</p>
         </div>
 
-        <div class="industry-info-items">
-          <div class="industry-info-item">
-            <h4>SIC Codes</h4>
-            <div>8742 (Management Consulting Services)</div>
-            <div>7371 (Computer Programming Services)</div>
-          </div>
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3><abbr title="Data Universal Numbering System">DUNS</abbr> #</h3>
+          <p>080202677</p>
+        </div>
 
-          <div class="industry-info-item">
-            <h4>NAICS Codes</h4>
-            <div>541611</div>
-            <div>541511</div>
-          </div>
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3><abbr title="Commercial and Government Entity">CAGE</abbr> Code</h3>
+          <p>7QNG6</p>
+        </div>
 
-          <div class="industry-info-item">
-            <h4>HUBZone Certification #</h4>
-            <div>56905</div>
-          </div>
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3><abbr title=" Historically Underutilized Business Zone">HUBZone</abbr> Certification #</h3>
+          <p>56905</p>
+        </div>
+
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3><abbr title="Standard Industrial Classification">SIC</abbr> Codes</h3>
+          <p><abbr title="Management Consulting Services">8742</abbr></p>
+          <p><abbr title="Computer Programming Services">7371</abbr></p>
+        </div>
+
+        <div class="industry-info-item">
+          <div aria-hidden="true"></div>
+          <h3><abbr title="North American Industry Classification System">NAICS</abbr> Codes</h3>
+          <p><abbr title="Administrative Management and General Management Consulting">541611</abbr></p>
+          <p><abbr title="Custom Computer Programming Services">541511</abbr></p>
         </div>
       </div>
     </div>
