scroll to child anchors on join page

--- a/pages/join.html
+++ b/pages/join.html
@@ -50,7 +50,7 @@ permalink: /join/
               <label class="required" for="zip-input">Zip code</label>
               <input id="zip-input" class="form-control" type="text" pattern="[0-9]{5}" title="Five-digit zip code" placeholder="55555" name="zip" autocomplete="postal-code" aria-describedby="zip-help" required>
               <small id="zip-help" class="form-text text-muted">
-                This helps us identify if you live in a <a href="/about/#hubzone" target="_blank">HUBZone</a>.
+                This helps us identify if you live in a <a href="/join/#who-where" target="_blank">HUBZone</a>.
               </small>
             </div>
           </fieldset>
