misc minor updates

--- a/pages/about.html
+++ b/pages/about.html
@@ -135,7 +135,7 @@ header_content_img_description:
       <div class="row">
         <div class="narrative">
           <p>
-            If you have a question for us, or would just like to get in touch, <a href="{{site.slack_invite_url}}">
+            If you have a question for us, or would just like to get in touch, <a href="{{site.slack_invite_url}}" target="_blank">
             drop us a message on Slack</a> or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
             If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
             If you're interested in joining our team, <a href="/join/">send us your information</a>.
@@ -150,13 +150,14 @@ header_content_img_description:
           </p>
 
           <p>
-            You can also follow along on Twitter @TBD.
+            You can also follow along on
+            <a href="{{site.twitter_url}}" target="_blank">Twitter @skylight_hq</a>.
           </p>
 
           <p>
             Feel free to reach out directly to one of our leaders &mdash;
             <a href="mailto:rob@skylight.digital">Rob Read</a>
-            or <a href="mailto:john@skylight.digital">John Teeter</a>.
+            or <a href="mailto:sean@skylight.digital">Sean Johnson</a>.
           </p>
 
           <p>
