partial work on guides, partial custom meta data

--- a/pages/about.html
+++ b/pages/about.html
@@ -93,7 +93,7 @@ header_content_img_description:
             {% if emp.active %}
               <div id="{{emp.name}}" class="employee">
                 <div class="employee-card">
-                  <img class="employee-img" src="{{emp.img_path}}" alt="{{emp.img_description}}">
+                  <img class="employee-img" src="{{emp.image}}" alt="{{emp.image_description}}">
                   <div class="employee-block">
                     <h3 class="employee-title">{{emp.full_name}}</h3>
                     <h4 class="employee-subtitle">{{emp.position}}</h4>
