--- a/pages/services.html
+++ b/pages/services.html
@@ -23,10 +23,10 @@ header_content: A lot goes into making you a digital-first agency.
           <div class="service-area">
             <a href="{{service_area.permalink}}">
               <div class="service-area-card">
-                <img class="service-area-img" src="{{service_area.icon_path}}" alt="{{service_area.icon_description}}">
+                <img class="service-area-img" src="{{service_area.image_icon}}" alt="{{service_area.image_icon_description}}">
                 <div class="service-area-block">
                   <h3>{{service_area.title}}</h3>
-                  <p>{{service_area.teaser}}</p>
+                  <p>{{service_area.excerpt}}</p>
                 </div>
                 <div class="service-area-footer">
                   <i class="fa fa-3x fa-arrow-circle-o-right" aria-hidden="true"></i>
