completed guide-related pages

--- a/pages/guides.html
+++ b/pages/guides.html
@@ -12,36 +12,13 @@ header_content: >
 
   {% include page_header.html %}
 
-  <div class="container">
+  {% assign guides = site.guides | sort: 'order' %}
 
-    {% assign guides = site.guides | sort: 'order' %}
-    {% assign collection_size = guides.size %}
-
-    {% include hanging_column_size.html
-      collection_size = collection_size
-      col_size = 3
-    %}
-
-    <div class="guides {{hanging_col_size_css_class}}">
-      {% for guide in guides | limit: limit %}
-        <article class="guide">
-          <a href="{{guide.permalink}}">
-            <div class="guide-card">
-              <img class="guide-img" src="{{guide.image}}" alt="{{guide.image_description}}">
-              <div class="guide-block">
-                <h3 class="guide-title">{{guide.title}}</h3>
-                <p class="guide-text">{{guide.excerpt}}</p>
-              </div>
-              <div class="guide-footer">
-                <span>Learn more</span>
-                <i class="fa fa-2x fa-long-arrow-right" aria-hidden="true"></i>
-              </div>
-            </div>
-          </a>
-        </article>
-      {% endfor %}
-    </div>
-  </div>
+  {% include card_list.html
+    collection = guides
+    prefix = 'guide'
+    cta_text = 'Learn more'
+  %}
 
 </div>
 
