--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -13,7 +13,7 @@ header_css_class: page-hdr-1
   <div class="container">
 
     <div class="row">
-      <div class="text-lead">
+      <div class="text-lead text">
         <p>
           <strong>We’d love to work with you on turning your most bold idea or complex problem
           into a public success story.</strong> Please describe what you're looking
