modify frontmatter naming conventions for page header

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,9 +3,9 @@ layout: default
 title: About Us
 permalink: /about/
 header_title: We're Skylight!
-header_content_css_class: page-hdr-content-1
+header_content_class: page-hdr-content-1
 header_content: Our mission is to make government work in a digital world.
-header_content_img_path: https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150
+header_content_img: https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150
 header_content_img_description:
 ---
 
@@ -135,8 +135,9 @@ header_content_img_description:
       <div class="row">
         <div class="narrative">
           <p>
-            If you have a question for us, or would just like to get in touch, <a href="{{site.slack_invite_url}}" target="_blank">
-            drop us a message on Slack</a> or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+            If you have a question for us, or would just like to get in touch, drop us a message
+            <a href="{{site.slack_invite_url}}" target="_blank">on Slack</a> or at
+            <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
             If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
             If you're interested in joining our team, <a href="/join/">send us your information</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
