--- a/pages/guides.html
+++ b/pages/guides.html
@@ -2,7 +2,7 @@
 layout: default
 title: Guides
 permalink: /guides/
-header_content_css_class: page-hdr-content-2
+header_content_class: page-hdr-content-2
 header_content: >
   Improving how government works in a digital world through our shared,
   open-source repository of how-to's and best practices.
