--- a/pages/services.html
+++ b/pages/services.html
@@ -2,7 +2,7 @@
 layout: default
 title: Our Services
 permalink: /services/
-header_content_css_class: page-hdr-content-1
+header_content_class: page-hdr-content-1
 header_content: A lot goes into making you a digital-first agency.
 ---
 
