--- a/pages/work.html
+++ b/pages/work.html
@@ -2,7 +2,7 @@
 layout: default
 title: Our Work
 permalink: /work/
-header_content_css_class: page-hdr-content-2
+header_content_class: page-hdr-content-2
 header_content: >
   We’re a newly-found HUBZone digital consultancy. Although our company is new,
   our people are not. Explore a sampling of the experience that we bring to your
