--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
 layout: default
 title: Our Blog
 permalink: /blog/
-header_content_css_class: page-hdr-content-2
+header_content_class: page-hdr-content-2
 header_content: Our shared thoughts on technology, design, procurement, business, culture, and more.
 ---
 
