--- a/pages/culture.html
+++ b/pages/culture.html
@@ -2,7 +2,7 @@
 layout: default
 title: Our Culture
 permalink: /culture/
-header_content_css_class: page-hdr-content-2
+header_content_class: page-hdr-content-2
 header_content: >
   Our values are the core of our culture, offering a set of guidelines on the
   behaviors and mindsets needed to achieve our mission of making government work
